# apexlab

./: .gitignore  MANIFEST.in  README.md  REFERENCE_VALIDATION_REPORT_20260324.md  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml
docs/: APEXLAB_LEG2_EXPANSION_PLAN_20260324.md  APEXLAB_TOOLKIT_AUTHORITATIVE_SCHEMATIC.md  API_OVERVIEW.md  INITIAL_RELEASE_SCOPE.md  PUBLISH_CHECKLIST.md  RELEASE_NOTES_DRAFT.md  RELEASE_PROCEDURE.md
docs/validation/: REFERENCE_VALIDATION_20260324.md
examples/: evaluation_demo.py  reference_validation_run.py  simplex_regression_demo.py
src/apexlab/: __init__.py
src/apexlab/analysis/: __init__.py  compare.py  regression.py
src/apexlab/cli/: __init__.py  compare.py  main.py  report.py
src/apexlab/datasets/: __init__.py  split.py
src/apexlab/demos/: __init__.py  synthetic.py
src/apexlab/diagnostics/: __init__.py  convergence.py
src/apexlab/evaluation/: __init__.py  compare_report.py  metrics.py  reports.py  thresholds.py
src/apexlab/models/: __init__.py  decision_tree.py  isolation_forest.py  random_forest.py  simplex.py
src/apexlab/utils/: __init__.py  io.py  manifests.py
tests/: conftest.py  test_cli.py  test_compare.py  test_compare_report.py  test_convergence.py  test_decision_tree.py  test_isolation_forest.py  test_manifests.py  test_metrics.py  test_random_forest.py  test_regression.py  test_reports.py  test_simplex.py  test_split.py  test_thresholds.py  test_version.py
validation/: APEXLAB_REFERENCE_VALIDATION_REPORT_20260324.html  APEXLAB_REFERENCE_VALIDATION_REPORT_20260324.md  README.md
