[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apexlab"
version = "1.1.1"
description = "ApexLab machine learning toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Joe Waller" }
]
dependencies = [
  "numpy>=1.23"
]

[project.scripts]
apexlab = "apexlab.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["apexlab*"]
